testdata/typechecker/error/portfolio_ThisFunctionField.java
// Tests that 'this' field accesses in functions error.

int main() {
    this.x = 0;
    return 0;
}
